# led-cube-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
contrib/: animations.json
contrib/rpi_cube/: led-cube-engine.service
src/: CMakeLists.txt  main.cpp
src/better_enums/: enum.hpp
src/cube/: CMakeLists.txt  specs.hpp
src/cube/core/: animation.cpp  animation.h  animation.hpp  asio_util.hpp  color.cpp  color.hpp  color_manipulation.hpp  composite_function.hpp  engine.cpp  engine.h  engine.hpp  engine_context.hpp  enum.hpp  events.cpp  events.hpp  expected.hpp  expression.cpp  expression.hpp  gradient.cpp  gradient.hpp  graphics_device.cpp  graphics_device.h  graphics_device.hpp  json_util.hpp  json_utils.hpp  logging.hpp  math.cpp  math.hpp  painter.cpp  painter.h  painter.hpp  parallel.cpp  parallel.hpp  subscriptions.cpp  subscriptions.hpp  timers.cpp  timers.hpp  utils.hpp  voxel.hpp  voxel_display.cpp  (+1 more)
src/cube/gfx/: animation_player.h  animation_track.cpp  animation_track.h  animation_track.hpp  animation_updater.hpp  configurable_animation.cpp  configurable_animation.hpp  easing.cpp  easing.hpp  gradient.cpp  gradient.hpp  json_util.hpp  json_utils.hpp  library.cpp  library.hpp  noise.hpp  property_value.hpp  transition.cpp  transition.hpp
src/cube/gfx/animations/: double_sine_wave.cpp  double_sine_wave.hpp  exploding_missile.cpp  exploding_missile.hpp  falling_balls.cpp  falling_balls.hpp  fill_cube.cpp  fill_cube.h  fill_cube.hpp  fireworks.cpp  fireworks.hpp  helix.cpp  helix.hpp  lightning.cpp  lightning.hpp  noise_v1.cpp  noise_v2.cpp  noise_v3.cpp  rain.cpp  ripple.cpp  stars.cpp  stars.hpp
src/cube/hal/: voxel_display.cpp  voxel_display.h  voxel_display.hpp
src/cube/hal/mock/: display.cpp  display.h  display.hpp  opengl_display.cpp  opengl_display.h  window.cpp  window.h  window.hpp
src/cube/hal/opengl/: mock_display.cpp  mock_display.h  window.cpp  window.h
src/cube/process/: entry.hpp  library.cpp  render.cpp
src/cube/programs/: entry.hpp  http_server.cpp  library.cpp  program.cpp  program.hpp  render.cpp  run.cpp
src/cube/programs/http/: listener.cpp  listener.hpp  router.cpp  router.hpp  server.cpp  server.hpp  session.cpp  session.hpp
src/cube/programs/http_server/: listener.hpp  program.cpp  session.hpp
src/cube/util/: brush.h  color.cpp  color.h  pen.h  time_step.cpp  time_step.h
src/driver/: graphics_device.hpp  specs.hpp
src/driver/mock/: display.cpp  display.hpp  window.cpp  window.hpp
src/driver/rpi_cube/: bus_comm.cpp  bus_comm.hpp  bus_flasher.cpp  bus_flasher.hpp  bus_proto.hpp  crc.hpp  display.cpp  display.hpp  gpio.cpp  gpio.hpp  hexfile.cpp  hexfile.hpp  hexflash.cpp  iodev.cpp  iodev.hpp  programs.cpp  resources.hpp  rs485.cpp  rs485.hpp  spi.cpp  spi.hpp
src/hal/: graphics_device.hpp  specs.hpp  target.hpp
src/hal/mock/: CMakeLists.txt  display.cpp  display.hpp  fwd.hpp  specs_fwd.hpp  window.cpp  window.hpp
src/hal/rpi/: CMakeLists.txt  display.cpp  display.hpp  fwd.hpp  gpio.cpp  gpio.hpp  peripherals.hpp  specs_fwd.hpp  voxel_display.cpp  voxel_display.hpp
src/hal/rpi_cube/: bootloader_utils.cpp  bus_comm.cpp  bus_comm.hpp  bus_flasher.cpp  bus_flasher.hpp  bus_proto.hpp  crc.hpp  display.cpp  display.hpp  gpio.cpp  gpio.hpp  hexfile.cpp  hexfile.hpp  hexflash.cpp  iodev.cpp  iodev.hpp  resources.hpp  rs485.cpp  rs485.hpp  safe_fd.hpp  specs_fwd.hpp  spi.cpp  spi.hpp
src/rest/: CMakeLists.txt  client.cpp  client.h  clientmanager.cpp  clientmanager.h  requestparser.cpp  requestparser.h  rest.h  router.cpp  router.h  routernode.cpp  routernode.h  server.cpp  server.h  tcpclient.cpp  tcpclient.h  tcpclientmanagement.cpp  tcpclientmanagement.h  tcpclientmanager.cpp  tcpclientmanager.h  tcpserver.cpp  tcpserver.h
src/rest/http/: http_client.cpp  http_client.h  http_handler.cpp  http_handler.h  http_server.cpp  http_server.h  httpclient.cpp  httpclient.h  httpparser.cpp  httpparser.h  httpserver.cpp  httpserver.h  types.h  uri.cpp  util.cpp  util.h
src/rest/net/: tcp_client.cpp  tcp_client.h  tcp_client_management.cpp  tcp_client_management.h  tcp_server.cpp  tcp_server.h  uri.cpp  uri.h
src/rest/net/routing/: resource_data.cpp  resource_data.h  router.cpp  router.h  router_handler.cpp  router_handler.h  router_node.cpp  router_node.h  routing_params.cpp  routing_params.h  token_data.cpp  token_data.h  tokens.cpp  tokens.h
src/rest/routing/: expression_data.cpp  expression_data.h  expression_fragment.cpp  expression_fragment.h  router.cpp  router.h  router_node.cpp  router_node.h  token_data.cpp  token_data.h  tokens.cpp  tokens.h
src/rest/types/: type_traits.h
